# drf_sandbox

./: .pdm-python  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check_commit.yml
docs/: er.md  tables.md
docs/tables/: docs_foreign_key.md  docs_main.md  docs_many_to_many.md  docs_many_to_many_ref.md  usage_article.md  usage_role.md  usage_submodel.md  usage_user.md  usage_validation.md  usage_validationreference.md
src/sandbox/: settings.py
src/sandbox/config/: settings.py  urls.py
src/sandbox/config/settings/: base.py  local.py  production.py
src/sandbox/usage/: admin.py  models.py  serializers.py  urls.py  views.py
src/sandbox/usage/authentication/: README.md  scheme.py  views.py
src/sandbox/usage/common_column/: views.py
src/sandbox/usage/custom_exception/: exception.py  handler.py  views.py
src/sandbox/usage/management/commands/: batch.py  makedocs.py
src/sandbox/usage/management/tools/make_db_docs/: README.md  makedbdocs.py
src/sandbox/usage/middleware/: access_log.py
src/sandbox/usage/migrations/: 0001_initial.py  0002_role_article.py  0003_submodel.py  0004_validationreference_validation.py  0005_docsforeignkey_docsmain_docsmanytomany_and_more.py
src/sandbox/usage/models/: __init__.py  models_common_column.py  models_docs.py  models_nested_response.py  models_validation.py
src/sandbox/usage/nested_response/: serializers.py  views.py
src/sandbox/usage/validation/: serializer.py
src/tests/fixtures/: data.json
src/tests/usage/common_model/: tests.py
tests/: README.md
tests/usage/: test_validation.py
