[project]
name = "sandbox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "komodora", email = "724komodora915@gmail.com" }]
dependencies = ["djangorestframework==3.14.0", "drf-writable-nested==0.7.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "NONE" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
django = "python src/sandbox/manage.py"
start = "python src/sandbox/manage.py runserver"
lint = "ruff check"
format = "ruff format"
test = "pytest"

[tool.ruff]
exclude = ["src/sandbox/usage/migrations"]

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "S", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["usage"]

[tool.ruff.lint.per-file-ignores]
"src/sandbox/usage/models/__init__.py" = ["F401"]
"tests/**" = ["N802"]

[dependency-groups]
dev = [
  "django-debug-toolbar==4.2.0",
  "drf-spectacular==0.26.5",
  "ruff>=0.11.3",
  "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.sandbox.config.settings.local"
pythonpath = [".", "src/sandbox"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
